Fixed Origin Errors And Updating

--- a/www/index.html
+++ b/www/index.html
@@ -24,7 +24,13 @@
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
+    <!--script src="js/utils.js"></scrip-->
     <script src="js/app.js"></script>
+    <script src="js/controllers.js"></script>
+    <!--script src="js/services.js"></script-->
+    <scipt src="js/constants.js"></scipt>
+    <script src="js/factory.js"></script>
+    <script src="json/courses.json"></script>
   </head>
 
   <body data-ng-app="MyFol">
@@ -33,5 +39,6 @@
       <ui-view>
       </ui-view>
     </ion-pane>
+
   </body>
 </html>
