Switch CSS to SCSS

--- a/www/index.html
+++ b/www/index.html
@@ -31,6 +31,9 @@
     <scipt src="js/constants.js"></scipt>
     <script src="js/factory.js"></script>
     <script src="json/courses.json"></script>
+
+    <!-- Moment js File http://momentjs.com -->
+    <script src="js/moment.js"></script>
   </head>
 
   <body data-ng-app="MyFol">
@@ -39,6 +42,5 @@
       <ui-view>
       </ui-view>
     </ion-pane>
-
   </body>
 </html>
