--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,9 @@
     <link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic%7CPT+Sans+Narrow:400,700' rel='stylesheet' type='text/css'>
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet" type="text/css">
-
+    <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.css">
+    <link href="css/angular-material-calendar.min.css" type="text/css">
+    
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
@@ -17,6 +19,8 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="js/angular-loader.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.min.js"></script>
+    <script src="https://cdn.rawgit.com/bradberger/angular-material-calendar/master/dist/angular-material-calendar.js"></script>
+
 
     <script src="js/ng-cordova.min.js"></script>
 
@@ -31,9 +35,14 @@
     <scipt src="js/constants.js"></scipt>
     <script src="js/factory.js"></script>
     <script src="json/courses.json"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-aria.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-messages.min.js"></script>
+
+  <!-- Angular Material Library -->
+  <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>
 
     <!-- Moment js File http://momentjs.com -->
-    <script src="js/moment.js"></script>
+    <!--script src="js/moment.js"></script-->
   </head>
 
   <body data-ng-app="MyFol">
